--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -20,7 +20,8 @@
         android:theme="@style/AppTheme">
 
         <activity android:name=".GovorActivity" />
-        <activity
+        <activity android:name=".LettersActivity"
+            android:label="Letters Activity" />        <activity
             android:name=".MainActivity"
             android:exported="true"
             android:label="@string/app_name"
