--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -21,7 +21,8 @@
 
         <activity android:name=".GovorActivity" />
         <activity android:name=".LettersActivity"
-            android:label="Letters Activity" />        <activity
+            android:label="Letters Activity" />
+        <activity
             android:name=".MainActivity"
             android:exported="true"
             android:label="@string/app_name"
